composer name update

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sabre/xml-atom",
+    "name": "scroller123/xml-atom",
     "description": "A reader and writer for the Atom format",
     "keywords": [
         "sabre",
