--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "license": "BSD-3-Clause",
     "require": {
         "php"       : ">=5.5",
-        "scroller123/sabre-xml" : "^1.5.1"
+        "scroller123/sabre-xml" : ">=1.5.1"
     },
     "authors": [
         {
